Changed left-margin on question block to vw units to fix layout issue in intermediate screen sizes.

--- a/static/css/game.css
+++ b/static/css/game.css
@@ -27,7 +27,7 @@
   text-align: left;
   border: 2px solid gray;
   border-radius: 4px;
-  margin-left: 10px; }
+  margin-left: 1vw; }
 
 .tech-block, .start-block {
   text-align: center;
