--- a/static/css/game.css.scss
+++ b/static/css/game.css.scss
@@ -49,7 +49,7 @@ $four-by-four-block-width: 19vw;
     text-align: left;
     border: 2px solid gray;
     border-radius: 4px;
-    margin-left: 10px;
+    margin-left: 1vw;
 }
 
 .tech-block, .start-block {
